# QuickHull

./: .gitignore  QuickHull.cabal  QuickHull.hs  QuickHullDraw.hs  README.md  quickhulltest.hs
src/: QuickHull.hs  QuickHullDraw.hs
test/: Main.hs
