name:                QuickHull
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/bitemyapp/QuickHull#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Allen
maintainer:          cma@bitemyapp.com
copyright:           2015, Chris Allen
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     QuickHull
                     , QuickHullDraw
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hmatrix >= 0.17 && < 0.18
                     , plot
                     , random
                     , vector
                     , vector-algorithms >= 0.7 && < 0.8

test-suite quickhull-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , QuickHull
                     , containers
                     , random
                     , vector
